QUICK FIX! Nav CSS
Fixed the navigation being overlapped by the twitch notification

--- a/css/master.css
+++ b/css/master.css
@@ -84,7 +84,7 @@ html, body {
 
   position: relative;
   top: -55px;
-  right: -180px;
+  right: -200px;
 
   float:right;
 
@@ -96,7 +96,7 @@ html, body {
 #nav-wrap {
   position: relative;
   top: -100px;
-  right: 180px;
+  right: 200px;
 
   float: right;
 
